# rustodo

./: .gitignore  .markdownlint.json  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  cliff.toml  codecov.yml  mkdocs.yml  todos.json
.github/workflows/: ci.yml  link-check-config.json  link-validation.yml  markdown-linter.yml  release.yml  semantic-release.yml
docs/: GUIDE.md  LEARNING.md  index.md
docs/advanced/: v1.8.0-global-data-directory.md  v1.9.0-edit-command-confirmation.md  v2.0.0-modular-refactoring.md  v2.1.0-recurring-tasks.md
docs/concepts/: cross-plataform-development.md  interactive-input.md
src/: cli.rs  config.rs  date_parser.rs  error.rs  lib.rs  main.rs  tag_normalizer.rs  utils.rs  validation.rs
src/commands/: add.rs  backup.rs  calendar.rs  clear.rs  clear_recur.rs  context.rs  deps.rs  done.rs  edit.rs  holidays_cmd.rs  info.rs  list.rs  mod.rs  next.rs  portability.rs  projects.rs  purge.rs  recur.rs  remove.rs  search.rs  stats.rs  stats_history.rs  sync.rs  tags.rs  undone.rs
src/commands/note/: add.rs  clear.rs  edit.rs  mod.rs  preview.rs  remove.rs  show.rs
src/commands/project/: add.rs  done.rs  edit.rs  remove.rs  show.rs  undone.rs
src/commands/resource/: add.rs  clear.rs  remove.rs  show.rs
src/commands/task/: add.rs  clear.rs  clear_recur.rs  done.rs  edit.rs  info.rs  list.rs  recur.rs  remove.rs  undone.rs
src/display/: formatting.rs  mod.rs  table.rs
src/models/: filters.rs  mod.rs  note.rs  priority.rs  recurrence.rs  task.rs
src/render/: calendar.rs  formatting.rs  note_table.rs
src/services/: holidays.rs
src/storage/: backup.rs  git.rs  json.rs  memory.rs  mod.rs  sqlite.rs
src/sync/: config.rs  git.rs  merge.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  style.rs  ui.rs
src/utils/: date_parser.rs  mod.rs
tests/: helpers.rs  test_add_command.rs  test_deps_command.rs  test_done_commands.rs  test_edit_command.rs  test_note_command.rs  test_project_commands.rs  test_projects_command.rs  test_recur_command.rs  test_remove_command.rs  test_resource_command.rs  test_search_command.rs  test_undone_command.rs
